@@ -28,7 +28,6 @@ retrace failures:
  - does not find files with complete path
 
 server needs:
-- run UI with .crash file
 - add UI option to only collect data without filing, print path to
   .crash file
 - if you say no to crash bug filing, print path
